--- a/styles/cards.css
+++ b/styles/cards.css
@@ -18,7 +18,7 @@
 
 .cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 16px;
 }
 
@@ -50,36 +50,100 @@
     border-radius: 12px;box-shadow: 1px 1px 5px 2px rgba(0,0,0.2);
 }
 
+.titre{
+    text-align: center;
+
+}
+
+.plats{
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.carte{
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.carte img{
+    width: 100%;
+    border-radius: 7px;
+    padding: 16px;
+    box-shadow: 1px 1px 6px 2px rgba(0,0,0.35);
+}
+
+.condiments{
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.conds{
+    border-radius: 7px;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.conds img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 7px;
+    padding: 16px;
+    box-shadow: 1px 1px 6px 2px rgba(0,0,0.35);
+}
+
+.boissons{
+    border-radius: 7px;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    padding: 16px;
+}
+
+.boissons img{
+    width: 70%;
+    border-radius: 7px;
+    padding: 16px;
+    box-shadow: 1px 1px 6px 2px rgba(0,0,0.35);
+}
+
 @media (min-width : 576px) {
     .cards{
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr ;
     }
 
 }
 
 @media (min-width : 768px) {
-    .cards{
+    .cards{grid-template-columns: 1fr 1fr 1fr ;
 
-    }
-
-}
-
-@media (min-width : 992px) {
-    .cards{
-
-    }
-
-}
-
-@media (min-width : 1200) {
-    .cards{
-    
-    }
-
-}
-@media (min-width : 1400px) {
-    .cards{
-    
     }
 
 }
