--- a/styles/cards.css
+++ b/styles/cards.css
@@ -58,7 +58,7 @@
 .plats{
     display: grid;
     grid-gap: 16px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     text-align: center;
 
     font-size: 24px;
@@ -89,7 +89,7 @@
 .condiments{
     display: grid;
     grid-gap: 16px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     text-align: center;
 
     font-size: 24px;
@@ -138,12 +138,22 @@
     .cards{
         grid-template-columns: 1fr 1fr ;
     }
+    .condiments{grid-template-columns: 1fr ;
+    }
+    .plats{ grid-template-columns: 1fr 1fr
+
+    }
 
 }
 
 @media (min-width : 768px) {
     .cards{grid-template-columns: 1fr 1fr 1fr ;
-
+    }
+    .condiments{
+        grid-template-columns: 1fr 1fr;
+    }
+    .cplats{
+        grid-template-columns: 1fr 1fr
     }
 
 }
